# raspberry-pi-pico-docker-sdk

./: .gitignore  Dockerfile  LICENSE  README.md  install_gcc.sh  main.c  sdk_session.sh  test_sdk.sh
.github/workflows/: sdk-ci.yml
docker/: Dockerfile
docs/: vscode_manual_setup.md
freertos_test_project/: CMakeLists.txt  main.cpp
freertos_test_project/config/: FreeRTOSConfig.h
test_poject/: CMakeLists.txt  main.c
